# scxmatch

./: .gitignore  README.md  meta.yaml  pixi.toml  pyproject.toml  scxmatch-0.1.0-pyhbf21a9e_0.conda
.github/workflows/: python-package-conda.yml
scxmatch/: __init__.py  _count.py  _match.py  _utils.py  core.py
src/scxmatch/: __init__.py  core.py  count.py  match.py  matching.py  rosenbaum.py  utils.py
src/scxmatch/.ipynb_checkpoints/: utils-checkpoint.py
src/tests/: mwe.py
tests/: conftest.py  mwe.py  test_mwe.py
