[project]
dependencies = []
name = "scXMatch"
requires-python = ">=3.9,<=3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
scxmatch = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
graph-tool = ">=2.92,<3"
scanpy = ">=1.10.4,<2"
scipy = ">=1.15.2,<2"

[tool.pixi.feature.gpu.dependencies]
cupy = "*"

[tool.pixi.environments]
gpu = ["gpu"]