[project]
dependencies = []
name = "scxmatch"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
scxmatch = { path = ".", editable = true }

[tool.pixi.tasks]
mwe = { cmd = "python mwe.py", cwd = "src/tests" }

[tool.pixi.dependencies]
python = "3.9.*"
graph-tool = ">=2.92,<3"
anndata = ">=0.10.9,<0.11"
scipy = ">=1.13.1,<2"
scanpy = ">=1.10.3,<2"
