[project]
name = "scxmatch"
version = "0.2.0"
authors = [
  { name="Anna Moeller", email="anna.moeller@fau.de" },
]
requires-python = ">=3.9"
description = "Python implementation for single-cell cross-match test."
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["anndata >=0.10.9",
                "scipy >=1.13.1, <2",
                "scanpy >=1.10.3, <2"]


[project.urls]
Homepage = "https://github.com/bionetslab/scxmatch"
Issues = "https://github.com/bionetslab/scxmatch/issues"

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scxmatch", "dist", ".git", ".github"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
markers = [
    "slow: marks tests as slow — uses remote datasets (deselect with '-m \"not slow\"')",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
